syntax = "proto3";

package rivet.backend.pkg.cloud.version_publish;

import "proto/common.proto";
import "proto/backend/cloud.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	string display_name = 2;
	rivet.backend.cloud.VersionConfig config = 3;
	optional rivet.common.Uuid creator_user_id = 4;
}

message Response {
	rivet.common.Uuid version_id = 1;
}
